[gd_scene load_steps=7 format=3 uid="uid://balgi0d8jpxym"]

[ext_resource type="Texture2D" uid="uid://dye0pkf8belxp" path="res://assets/sprite/weapon/å‰‘.png" id="1_3l00a"]
[ext_resource type="Script" uid="uid://cmf0st03v8v1e" path="res://script/weapon/sword.gd" id="1_cmeob"]
[ext_resource type="Script" uid="uid://bd1oxv0hkmcqm" path="res://script/entity/entity_data.gd" id="3_a7b7q"]
[ext_resource type="PackedScene" uid="uid://pcymw605ti46" path="res://prefabs/animation/particles/sword_fly_particle.tscn" id="4_v2wsh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e2cwa"]
height = 67.8822

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8lpdd"]
height = 67.8823

[node name="Sword" type="RigidBody2D"]
collision_layer = 8
mass = 0.001
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_cmeob")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, -3.8147e-06)
rotation = 0.785397
scale = Vector2(0.32, 0.32)
texture = ExtResource("1_3l00a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource("CapsuleShape2D_e2cwa")

[node name="Attack Area" type="Area2D" parent="."]
rotation = 0.785397
collision_layer = 8
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
rotation = 0.785397
shape = SubResource("CapsuleShape2D_8lpdd")

[node name="EntityData" type="Node" parent="."]
script = ExtResource("3_a7b7q")
max_health = 5
health = 5
defense = 0
moving_direction = "right"
max_velocity_x_abs = 400
knockback_velocity = Vector2(250, -200)

[node name="Sword Fly Particle" parent="." instance=ExtResource("4_v2wsh")]
position = Vector2(-40, 0)

[node name="Disapear Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Attack Area" to="." method="on_area_entered"]
[connection signal="area_exited" from="Attack Area" to="." method="on_area_exited"]
[connection signal="timeout" from="Disapear Timer" to="." method="queue_free"]
